# cargo-16297-repro

./: Cargo.toml  README.md
crates/my-proc-macros/: Cargo.toml
crates/my-proc-macros/src/: lib.rs
crates/my-tauri-bevy_ecs-app/: Cargo.toml
crates/my-tauri-bevy_ecs-app/src/: lib.rs  main.rs
